--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ body {
     --color3: hsla(200, 61%, 56%, 1);
     --color4: hsla(187, 41%, 94%, 1);
     --color5: hsla(170, 28%, 95%, 1); */
-
+/* 
     /* --color1: hsla(45, 86%, 83%, 1);
     --color2: hsla(135, 65%, 98%, 1);
     --color3: hsla(315, 37%, 86%, 1);
@@ -18,8 +18,8 @@ body {
     --gutter: 30px;
     --footer-height: 25px;
     
-    font-family: 'Titillium Web', sans-serif;
-    background-color: var(--color2);
+    font-family: 'Times New Roman', Times, serif ;
+    background-color: lightgrey;
 }
 
 main {
@@ -60,12 +60,6 @@ footer {
     box-shadow: var(--shadow);
 }
 
-
-h2 {
-    font-size: 1.8rem;
-    font-weight: bold;
-}
-
 .gutter-right {
     margin-right: 20px;
 }
@@ -73,9 +67,21 @@ h2 {
 .main-logo {
     animation: pulse 5s infinite ease-in-out;
 }
+ 
+.ts-logo {
+ margin-left: 60px;
+ width: 130px;
+ height: auto;
+}
 
 header img {
     height: var(--header-height);
+}
+
+
+
+content {
+    width: 80%;
 }
 
 p {
